@@ -74,6 +74,9 @@ Try to reconnect to disconnected remote shells. The special characters * ? and [
 \fB:rename [NEW_NAME]\fR
 Rename all enabled remote shells with the argument. The argument will be shell expanded on the remote processes. With no argument, the original hostname will be restored as the displayed name.
 .TP 
+\fB:replicate SHELL:path\fR
+Copy a path from one remote shell to all others
+.TP 
 \fB:reset_prompt [SHELLS...]\fR
 Change the prompt to be recognized by \fIgsh\fR. The special characters * ? and [] work as expected.
 .TP 
